--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
         <div class="card">
             <h1 class="login">LOG-IN</h1>
             <form action="/logar" method="post">
-            <input class="usuario "type="text" name="usuario" id="usuario" placeholder="Usuário">
+            <input class="usuario "type="text" name="nome" id="usuario" placeholder="Usuário">
             <input class="senha" type="text" name="senha" id="senha"  placeholder="Senha">
             <button class="botao">Enviar</button>
             </form>
