--- a/templates/login.html
+++ b/templates/login.html
@@ -15,15 +15,17 @@
 
 
     <div class="container">
-        <div class="card">
+        <div class="card center">
             <h1 class="login">LOG-IN</h1>
             <form action="/logar" method="post">
-            <input class="usuario "type="text" name="nome" id="usuario" placeholder="Usuário">
-            <input class="senha" type="text" name="senha" id="senha"  placeholder="Senha">
-            <button class="botao">Enviar</button>
+            <input class="usuario "type="text" name="nome" id="usuario" placeholder="Usuário"> <br>
+            <input class="senha" type="password" name="senha" id="senha"  placeholder="Senha"> <br>
+            <button class="botao">Enviar</button> <br> <br> <br> 
+            <a href="/cadastrar" class="botao2 botao-pequeno bg-red"> Cadastrar novo usuario</a>
             </form>
         </div>
     </div>
+
 
 </body>
 </html>
