--- a/static/style.css
+++ b/static/style.css
@@ -49,3 +49,47 @@ html, body{
     justify-content: center;
     font-family: roboto;
 }
+
+ 
+.bg-green{ 
+    background-color: rgb(98, 180, 98); 
+    color: white; 
+} 
+ 
+.bg-red{ 
+    background-color: rgb(214, 90, 90); 
+    color: white; 
+} 
+ 
+.bg-blue{ 
+    background-color: rgb(12, 123, 175); 
+    color: white; 
+}
+
+.center{ 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    align-self: center; 
+    justify-content: center; 
+    align-content: center; 
+    vertical-align: middle; 
+    text-align: center; 
+}
+
+.botao2{ 
+    background:rgb(90, 90, 90); 
+    color: white; 
+    text-decoration: none; 
+    min-width: 50%; 
+    padding: 15px; 
+    text-align: center; 
+    border-radius: 5px; 
+    margin: 5px; 
+    cursor: pointer; 
+} 
+
+.botao-pequeno{ 
+    padding: 8px; 
+} 
+ 
