--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -8,13 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-
     <div class="container">
         <div class="card center">
-            <h1>Usuário não logado</h1>
-            <a href="/" class="botao2 botao-pequeno">Fazer Login</a>
+            <h1> Cadastrar</h1>
+            <form action="./cadastrar" method="POST">
+                <input type="text" name="nome" placeholder="Usuário"> <br>
+                <input type="password" name="senha" placeholder="Usuário"> <br>
+                <input type="submit" value="Enviar">    
+            </form>
         </div>  
     </div>  
-    
+
 </body>
 </html>
