--- a/templates/exibirestados.html
+++ b/templates/exibirestados.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="card">
-            <textarea name="estados" cols="30" rows="10" disabled>
+        <div class="textcard">
+            <textarea name="estados" disabled>
              {{dados_estados}}
             </textarea>
-            <a href="/dashboard" class="botao center bg-red"> Voltar </a>
+            <a href="/dashboard" class="defaultbtn"> Voltar </a>
         </div>
     </div>
 </body>
