--- a/templates/nlogado.html
+++ b/templates/nlogado.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
     <title>Document</title>
 </head>
@@ -12,7 +15,7 @@
     <div class="container">
         <div class="card center">
             <h1>Usuário não logado</h1>
-            <a href="/" class="botao2 botao-pequeno">Fazer Login</a>
+            <a href="/" class="defaultbtn">Fazer Login</a>
         </div>  
     </div>  
     
