--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
     <title>Document</title>
 </head>
@@ -11,10 +14,15 @@
     <div class="container">
         <div class="card center">
             <h1> Cadastrar</h1>
-            <form action="./cadastrar" method="POST">
+            <form action="./cadastrar" method="POST" class="formulario">
                 <input type="text" name="nome" placeholder="Usuário"> <br>
                 <input type="password" name="senha" placeholder="Usuário"> <br>
-                <input type="submit" value="Enviar">    
+                <div class="controle">
+                    <input type="submit" value="Enviar" class="botao">   <br> <br>
+                    <a href="/" class="defaultbtn"> Voltar</a>
+                </div>
+
+                
             </form>
         </div>  
     </div>  
