alteração nas rotas do usuario

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,7 @@
             <a href="/estados/pobres" class="defaultbtn" > 
                 Estados mais pobres 
             </a> 
-            <a href="/naologado" class="defaultbtn"> 
+            <a href="/sair" class="defaultbtn"> 
                 Sair 
             </a>
         </div>  
